[package]
name = "Carnister"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
colored = "3.0.0"
env_logger = "0.11.8"
indicatif = "0.18.0"
indicatif-log-bridge = "0.2.3"
log = "0.4.27"
qrcode-generator = "5.0.0"
regex = "1.11.1"
reqwest = {version = "0.12.22", features = ["json"]}
rusttype = "0.9.3"
serde_json = "1.0.140"
text-svg = "0.1.2"
text_io = "0.1.13"
tokio = { version = "1.46.1", features = ["full"] }
